# edgent-smith

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  EXPERIMENT_RULES.md  README.md  auto_research.baseline-candidate.json  auto_research.baseline.json  autofix.toml  config.py  docker-compose.yml  edge_agent_debug.baseline-candidate.json  edge_agent_default.baseline.json  justfile  limited_context.config.toml  local.baseline.json  local_openrouter.baseline-candidate.json  local_openrouter.baseline.json  opencode.jsonc  pyproject.toml  skills-lock.json
.copilot/: mcp-config.json
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.yml  setup-dev.sh
.github/: copilot-instructions.md
.opencode/: .eslintcache  .gitignore  eslint.config.js  justfile  notification-ntfy.json  notifier-config.json  oh-my-openagent.jsonc  package.json  quality-gates.json  skills-lock.json  stryker.config.mjs  tsconfig.json  vitest.config.ts
.serena/: project.yml
PROMPTS/: analyze_results.md  failure_triage.md  implement_candidate.md  promotion_pr.md  propose_experiment.md
agent_utils/: justfile
agents/: AGENTS.md  brainstorm.py  edge.py  edge_tracing.py  implement.py
cli/: AGENTS.md  __init__.py  main.py  project_config.py
docs/: MIGRATION.md  ideas.md  migration-notes.md  models.md  opencode_migration_case_study.html  refactor.md
eval/: __init__.py  harness.py
evals/: AGENTS.md  baseline.json  copilot_runner.py  edge_agent_default.baseline.json  extended.py  long_inputs.py  ollama_gemma4_e2b.baseline.json  ollama_runner.py  runner.py  smoke.py
experiments/: 2.md  candidate.md  index.json  local_idea_body.md  local_idea_draft.yaml  local_idea_title.txt  manual.state.json  registry.state.json
mcp/: catalog.yaml  docker-config.json
scripts/: baseline_status.sh  check_labeler.sh  check_queue_depth.sh  ci.sh  echo_stdin.py  experiment.py  fix_code.sh  format_experiment_output.py  git_todos.sh  ollama_status.py  parse_draft.py  promote_baseline.sh  pull_ollama_model.sh  run_experiment.sh  terminalize_experiment.py  transform_mcp_json.sh  validate_workflow_security.py
tests/: test_ci_workflow.py  test_cli_design.py  test_cli_experiment.py  test_cli_fix.py  test_cli_init.py  test_cli_validate.py  test_command_context.py  test_config.py  test_copilot_session.py  test_echo_stdin.py  test_edge_agent.py  test_edge_tracing.py  test_experiment.py  test_experiment_storage.py  test_hf_papers.py  test_long_inputs.py  test_project_config_module_location.py  test_runner.py  test_task_runner.py
workflows/: step1.sh  step2.sh  test_script_workflow.yaml
(+322 files in other folders)
