[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgent-smith"
version = "0.1.0"
description = "Agentic system optimized for edge models"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "edgent-smith contributors" }]
dependencies = [
    "pydantic-ai[evals]>=0.0.14",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "evals"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S603", "S607"]  # subprocess with list is fine

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is idiomatic in pytest tests

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
